--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ julia:
   - nightly
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("Intervals"); Pkg.test("Intervals"; coverage=true)'
+script:
+    - julia -e 'Pkg.clone(pwd())'
+    - julia --check-bounds=yes -e 'Pkg.test("Intervals", coverage=true)'
+after_success:
+  - julia -e 'cd(Pkg.dir("Intervals")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
